fix: Optimized for custom Collapse

--- a/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/CustomCollapse/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/CustomCollapse/index.less
@@ -19,6 +19,7 @@
     }
 
     .title {
+      width: 130px;
       padding: 0 10px;
       color: #fff;
       background-color: #ef7c3e;
@@ -26,6 +27,7 @@
     }
   }
   .content {
+    padding-top: 10px;
   }
 }
 
@@ -39,10 +41,10 @@
 }
 
 @keyframes rotatingClose {
-    0% {
-        transform: rotate(90deg);
-    }
-    100% {
-      transform: rotate(0);
-    }
+  0% {
+    transform: rotate(90deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
 }
